--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: SpaceThrust
 email: sayhi@spacethrust.com
 description: > # this means to ignore newlines until "baseurl:"
   News on rockets, electric propulsion and enverything that moves in space..
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "spacethrust" # the subpath of your site, e.g. /blog
 url: "http://mdj.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: damjoergensen
 github_username:  mdj
